Fix bug on mobile where image previews never hide.

--- a/client/src/components/CardImagePreview/CardImagePreview.scss
+++ b/client/src/components/CardImagePreview/CardImagePreview.scss
@@ -2,6 +2,11 @@
     position: absolute;
     z-index: 3;
     pointer-events: none;
+    display: none;
+
+    @media (hover) {
+        display: block;
+    }
 
     &-image {
         display: inline-block;
